2009-08-03  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php:
	- scorerender_filter() -> scorerender_init_class(), better reflecting
	  its actual purpose.
	* scorerender-class.php, notation/*.php:
	- (program_setting_entry): Drop $id parameter.

2009-08-01  Abel Cheung  <abelcheung@gmail.com>

	* scorerender-admin.php (scorerender_admin_section_prog):
	- Move program settings in admin page to each notation php.
	* scorerender-class.php, notation/*.php:
	- (program_setting_entry) New func for generating HTML fragment for
	  admin page.

2009-07-30  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php:
	- Move notation data to each notation file.
	* scorerender-class.php:
	- Mark is_web_hosting() and is_prog_usable() as static function.
	* scorerender-admin.php (scorerender_update_options):
	- Move error messages and program checking to each notation file, and
	  use wordpress hook to execute them.
	* notation/{abc,lilypond,mup,pmw}.php:
	- (define_admin_messages): New func.
	- (is_notation_usable): Reworked to produce error message as well.
	* notation/guido.php (is_notation_usable):
	- Disabled for now.

2009-07-26  Abel Cheung  <abelcheung@gmail.com>

	* scorerender-class.php:
	- Fix program checking logic, which fails if desired matching string
	  is not shown on the first line of program output. 

2009-07-26  Abel Cheung  <abelcheung@gmail.com>

	* scorerender-admin.php:
	- Tweak admin page to match WP 2.8 style.
	- (scorerender_get_num_of_images) Restore this func.
	- (scorerender_remove_cache) Simplify check.
	- (scorerender_admin_options) Fix typo causing javascript to not
	  included in admin page, strip redundant description.
	* wp-scorerender.php:
	- (transform_paths) Move to scorerender-utils.php.
	- Also define notation URLs and names.

2009-07-24  Abel Cheung  <abelcheung@gmail.com>

	* *.php: Version bump.
	* wp-scorerender.php:
	- (scorerender_get_def_settings) Avoid determining program path when
	  just requesting variable types. 
